namespace Models.Enums;

public enum PaymentMethod
{
    CreditCard,
    Invoice,
}