namespace Models.Enums;

public enum SeatType
{
    Chair,
    Bench
}