@startuml

enum SeatType {
    Chair
    Bench
}

enum PaymentMethod {
    CreditCard
    Invoice
}

enum EventType {
    Concert
    Sports
    Theater
    ComedyShow
}

abstract class BaseEntity {
    + Id: int
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

note right of BaseEntity
  Klasser som är markerade med <<BaseEntity>>
  ärver från BaseEntity för att undvika
  ett spindelnät av pilar.
end note

abstract class BookableSpace <<BaseEntity>> {
    + Price: decimal
    + IsBooked: bool
    + EntranceId: int
    + EntranceNavigation: Entrance
    + TicketsNavigation: List<Ticket>
}

class Arena <<BaseEntity>> {
    + Address: string
    + Name: string
    + NumberOfSeats: int
    + NumberOfLoges: int
    + Indoors: bool
    + NumberOfEntrances: int 
    + EntrancesNavigation: List<Entrance> 
    + SeatLayoutsNavigatyion: List<SeatLayout>
    + EventsNavigation: List<Event>
}
 
class SeatLayout <<BaseEntity>> {
    + Name: string 
    + NumberOfRows: int
    + NumberOfCols: int
    + ArenaId: int
    + ArenaNavigation: Arena
    + SeatsNavigation: List<Seat>
    + EventsNavigation: List<Event>
}

class Entrance <<BaseEntity>> {
    + Name: string
    + VipEntrance: bool
    + ArenaId: int 
    + ArenaNavigation: Arena 
}

class Event <<BaseEntity>> {
    + Name: string
    + Date: DateOnly
    + StartTime: TimeOnly
    + EndTime: TimeOnly
    + ReleaseTicketsDate: DateTime
    + Price: decimal
    + Cost: decimal
    + Type: EventType
    + IsFamilyFriendly: bool 
    + ArenaId: int 
    + ArenaNavigation: Arena
    + SeatLayoutId: int
    + SeatLayoutNavigation: SeatLayout
    + TicketsNavigation: List<Ticket> 
    + CalculateEventLength(): TimeSpan
    + CalculateEarnings(): decimal
    + TypeToString(): string
}

class Ticket <<BaseEntity>> {
    + Price: decimal
    + Description: string 
    + BookingId: int? 
    + BookingNavigation: booking? 
    + EventId: int 
    + EventNavigation: event 
    + BookableSpaceId: int 
    + BookableSpaceNavigation: bookableSpace
    + PendingBookingReference: string? 
    + IsPending: bool 
    + IsBooked: bool 
}

class Seat <<BaseEntity>>{
    + RowNumber: int
    + ColNumber: int
    + Type: SeatType
    + SeatLayoutId: int
    + SeatLayoutNavigation: SeatLayout
    + TypeToString(): string 
}

class Loge <<BaseEntity>> { 
    + Name: string
    + LogeNumber: string
    + NumberOfPeople: int
}

class Booking <<BaseEntity>> {
    + ReferenceNumber: string 
    + Email: string 
    + TotalPrice: decimal 
    + IsPaid: bool 
    + ConfirmationPdfPath: string 
    + InvoicePdfPath: string? 
    + PaymentNavigation: Payment? 
    + TicketsNavigation: List<Ticket>
}

class Payment <<BaseEntity>> {
    + BookingId: int 
    + BookingNavigation: Booking 
    + PaymentMethod: PaymentMethod 
}

Arena "1" *-- "0..*" Event
BookableSpace *-- Entrance
Arena "1" *-- "1..*" Entrance
Ticket "1..*" *-- "0..1" Booking
Booking "1" *-- "0..1" Payment
Ticket "1..*" *-- "1"  Event

BookableSpace <|-- Seat
BookableSpace <|-- Loge
Ticket *-- BookableSpace

SeatLayout "1" *-- "1..*" Seat
Arena "1" *-- "0..*" SeatLayout
Event "0..1" *-- "1" SeatLayout

@enduml